# ctr-native-android

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_ANDROID.md  THIRD_PARTY_NOTICES.md  build-msvc.bat  build.bat  build.sh  ctr_native.c  ctr_native.h  game_includes.h  game_unity.h  main.c  platform.h
android/: gradle.properties  settings.gradle
android/app/: build.gradle  lint.xml
docs/: MEMORY_MODEL.md
game/: 221.c  222.c  223.c  BOTS.c  CAM.c  CDSYS.c  COLL.c  DecalFont.c  DecalHUD.c  DecalMP.c  Display.c  DrawConfetti.c  ElimBG.c  FLARE.c  GAMEPAD.c  GAMEPROG.c  GhostReplay.c  MEMPACK.c  Particle.c  PickupBots.c  PushBuffer.c  RECTMENU.c  RaceFlag.c  RenderStars.c  SelectProfile.c  TEST_226.c  TEST_ThTickRunBucket.c  Torch.c  Vector.c  game_unity.h  zGlobal_DATA.c  zGlobal_RDATA.c  zGlobal_SDATA.c
game/223/: 223_Full.c
game/226/: 226_00_DrawLevelOvr1P.c
game/227/: 227_00_DrawLevelOvr2P.c
game/228/: 228_00_DrawLevelOvr3P.c
game/229/: 229_00_DrawLevelOvr4P.c
game/230/: 230_04_MM_Title_CameraMove.c  230_05_MM_Title_ThTick.c  230_07_MM_Title_CameraReset.c  230_39_MM_AdvNewLoad_GetMenuPtr.c  230_44_MM_Characters_DrawWindows.c  230_45_MM_Characters_SetMenuLayout.c  230_47_MM_Characters_PreventOverlap.c  230_53_MM_TrackSelect_Video_Draw.c  230_57_MM_TrackSelect_GetMenuPtr.c  230_60_MM_Battle_CloseSubMenu.c  230_62_MM_Battle_Init.c  230_68_MM_Scrapbook_Init.c  230_69_MM_Scrapbook_PlayMovie.c  230_71_MM_JumpTo_Title_Returning.c  230_83_MM_Video_ClearMem.c  230_Full.c  D230.c  MM_Battle.c  MM_Characters.c  MM_CheatCodes.c  MM_CupSelect.c  MM_HighScore.c  MM_MenuFlow.c  MM_Scrapbook.c  MM_Title.c  MM_TrackSelect.c  MM_Video.c  R230.c
game/231/: 231_001_RB_Player_KillPlayer.c  231_002_RB_Player_ModifyWumpa.c  231_006_RB_Hazard_HurtDriver.c  231_009_RB_Hazard_ThCollide_Generic_Alt.c  231_018_RB_TNT_ThTick_ThrowOffHead.c  231_019_RB_TNT_ThTick_SitOnHead.c  231_020_RB_TNT_ThTick_ThrowOnHead.c  231_024_RB_MovingExplosive_ThTick.c  231_030_RB_Warpball_GetDriverTarget.c  231_031_RB_Warpball_SetTargetDriver.c  231_033_RB_Warpball_TurnAround.c  231_034_RB_Warpball_ThTick.c  231_036_RB_MaskWeapon_ThTick.c  231_037_RB_ShieldDark_ThTick_Pop.c  231_038_RB_ShieldDark_ThTick_Grow.c  231_048_RB_Blowup_Init.c  231_056_RB_Baron_ThTick.c  231_058_RB_Blade_ThTick.c  231_060_RB_Bubbles_RoosTubes.c  231_061_068_RB_Crate.c  231_082_085_RB_Armadillo.c  231_086_088_RB_Fireball.c  231_092_094_RB_Follower.c  231_099_100_RB_Minecart.c  231_101_103_RB_Orca.c  231_110_113_RB_Seal.c  231_116_119_RB_Spider.c  231_127_129_RB_Turtle.c  231_Full.c  RB_Burst.c  RB_Crate.c  RB_Crystal.c  RB_CtrLetter.c  RB_Fireball.c  RB_GenericMine.c  RB_MaskShieldCloud.c  RB_MovingExplosive.c  RB_Orca.c  RB_Seal.c  RB_Spider.c  (+2 more)
game/232/: 232_04_AH_WarpPad_ThTick.c  232_09_AH_Garage_ThTick.c  232_12_AH_SaveObj_ThTick.c  232_13_AH_SaveObj_LInB.c  232_15_AH_Door_ThTick.c  232_16_AH_Door_LInB.c  232_21_AH_Map_HubItems.c  232_25_AH_Pause_Draw.c  232_32_AH_MaskHint_SetAnim.c  232_35_AH_MaskHint_Update.c  AH_Door.c  AH_Garage.c  AH_HintMenu.c  AH_Map.c  AH_Pause.c  AH_WarpPad.c  D232.c  R232.c
game/233/: 233_01_CS_Thread_LInB.c  233_13_CS_DestroyPodium_StartDriving.c  233_14_CS_Thread_UseOpcode.c  233_15_CS_Thread_AnimateScale.c  233_16_CS_Thread_MoveOnPath.c  233_17_CS_Thread_Particles.c  233_18_CS_Thread_InterpolateFramesMS.c  233_19_CS_LoadBossCallback.c  233_20_CS_LoadBoss.c  233_21_CS_Camera_ThTick_Boss.c  233_22_CS_Camera_BoolGotoBoss.c  233_23_CS_Camera_ThTick_Podium.c  233_24_CS_Thread_Init.c  233_25_CS_Instance_InitMatrix.c  233_25_CS_Podium_Prize_Spin.c  233_26_CS_Podium_Prize_ThTick3.c  233_27_CS_Podium_Prize_ThTick2.c  233_28_CS_Podium_Prize_ThTick1.c  233_30_CS_Podium_Prize_Init.c  233_32_CS_Podium_Stand_Init.c  233_33_CS_Podium_FullScene_Init.c  233_35_CS_Cutscene_Start.c  233_36_CS_BoxScene_InstanceSplitLines.c  233_37_40_CS_Garage.c  233_44_CS_Credits_GetNextString.c  233_45_CS_Credits_DestroyCreditGhost.c  233_46_CS_Credits_AnimateCreditGhost.c  233_47_CS_Credits_Init.c  233_48_CS_Credits_IsTextValid.c  233_49_CS_Credits_NewDancer.c  233_50_CS_Credits_NewCreditGhosts.c  233_51_CS_Credits_End.c  233_52_CS_Credits_DrawNames.c  233_53_CS_Credits_DrawEpilogue.c  233_54_CS_Credits_ThTick.c  233_stubs.c  233_zGlobal_gGarage.c  CS_Camera.c  CS_Credits.c  CS_Garage.c  (+5 more)
game/BOTS/: BOTS_02_EmptyFunc.c  BOTS_08_ThTick_RevEngine.c  BOTS_09_MaskGrab.c  BOTS_11_ThTick_Drive.c
game/CAMERA/: CAM_06_StartOfRace.c  CAM_13_FollowDriver_TrackPath.c
game/CDSYS/: CDSYS_04_SetXAToLang.c
game/COLL/: COLL_04_FIXED_PlayerSearch.c  COLL_21_MOVED_PlayerSearch.c
game/CTR/: CTR_Error.c
game/DecalFont/: DecalFont_2_DrawLineStrlen.c
game/DecalGlobal/: DecalGlobal_1_Clear.c  DecalGlobal_2_Store.c
game/DecalHUD/: DecalHUD_1_DrawWeapon.c
game/DecalMP/: DecalMP_01.c  DecalMP_02.c  DecalMP_03.c  DecalMP_Common.h
game/Display/: DISPLAY_0_Blur_SubFunc.c  DISPLAY_1_Blur_Main.c
game/DrawConfetti/: DrawConfetti.c
game/DrawSky/: DrawSky.c
game/FLARE/: FLARE_0_ThTick.c  FLARE_1_Init.c
game/GAMEPAD/: GAMEPAD_03_PollVsync.c  GAMEPAD_04_GetNumConnected.c  GAMEPAD_05_ProcessHold.c  GAMEPAD_06_ProcessSticks.c  GAMEPAD_07_ProcessTapRelease.c
game/GHOST/: GhostTape_00_Start.c  GhostTape_03_WriteBoosts.c  (+1 more)
include/: common.h  ctr_compiler.h  ctr_gte.h  ctr_math.h  decomp_functions.h  functions.h  gpu.h  macros.h  namespace_Bots.h  namespace_Camera.h  namespace_Cdsys.h  namespace_Coll.h  namespace_Display.h  namespace_DrawLevel.h  namespace_Gamepad.h  namespace_Howl.h  namespace_Instance.h  namespace_Level.h  namespace_Main.h  namespace_Memcard.h  namespace_Proc.h  namespace_PushBuffer.h  namespace_RenderTires.h  namespace_Vehicle.h  ovr_230.h  ovr_232.h  ovr_233.h  platform.h  regionsEXE.h
platform/: native_android.c  native_assets.c  native_audio.c  native_cd.c  native_checkpoint.c  native_gpu.c  native_gpu_links.c  native_gte_core.c  native_input.c  native_libgpu.c  native_log.c  native_memcard.c  native_memory.c  native_perf.c  native_platform.c  native_renderer.c  native_state.c  native_str.c
(+203 files in other folders)
